--- a/thule-microservice-deployment/src/main/k8s/apply/dashboard-ingress.yml
+++ b/thule-microservice-deployment/src/main/k8s/apply/dashboard-ingress.yml
@@ -9,7 +9,7 @@ metadata:
   namespace: kube-system
 spec:
   rules:
-    - host: piglet
+    - host: piglet.serin-consultancy.co.uk
       http:
         paths:
           - path: /dashboard(/|$)(.*)
