--- a/thule-people-service/k8s/cit.yml
+++ b/thule-people-service/k8s/cit.yml
@@ -113,7 +113,7 @@ spec:
             - pooh
         - ip: 192.168.0.104
           hostnames:
-            - piglet
+           - piglet.serin-consultancy.co.uk
 ---
 kind: HorizontalPodAutoscaler
 apiVersion: autoscaling/v2beta1
@@ -145,7 +145,7 @@ metadata:
   namespace: thule
 spec:
   rules:
-    - host: piglet
+    - host: piglet.serin-consultancy.co.uk
       http:
         paths:
           - path: /thule-people-service(/|$)(.*)
@@ -154,7 +154,7 @@ spec:
               servicePort: 80
   tls:
     - hosts:
-        - piglet
+       - piglet.serin-consultancy.co.uk
       secretName: thule-application-secrets
 ---
 kind: Service
