--- a/thule-authentication-service/k8s/cit.yml
+++ b/thule-authentication-service/k8s/cit.yml
@@ -65,7 +65,7 @@ spec:
             - name: JDK_JAVA_OPTIONS
               value: -XX:InitialHeapSize=256m -XX:MaxHeapSize=256m -XX:MaxMetaspaceSize=256m
             - name: KEYCLOAK_FRONTEND_URL
-              value: https://piglet/thule-authentication-service/auth
+              value: https://piglet.serin-consultancy.co.uk/thule-authentication-service/auth
             - name: KEYCLOAK_USER
               valueFrom:
                 secretKeyRef:
@@ -126,7 +126,7 @@ spec:
             - pooh
         - ip: 192.168.0.104
           hostnames:
-            - piglet
+           - piglet.serin-consultancy.co.uk
 ---
 kind: HorizontalPodAutoscaler
 apiVersion: autoscaling/v2beta1
@@ -158,7 +158,7 @@ metadata:
   namespace: thule
 spec:
   rules:
-    - host: piglet
+    - host: piglet.serin-consultancy.co.uk
       http:
         paths:
           - path: /thule-authentication-service(/|$)(.*)
@@ -167,7 +167,7 @@ spec:
               servicePort: 80
   tls:
     - hosts:
-        - piglet
+       - piglet.serin-consultancy.co.uk
       secretName: thule-application-secrets
 ---
 kind: Service
