--- a/thule-configuration-service/k8s/cit.yml
+++ b/thule-configuration-service/k8s/cit.yml
@@ -79,7 +79,7 @@ spec:
             - pooh
         - ip: 192.168.0.104
           hostnames:
-            - piglet
+           - piglet.serin-consultancy.co.uk
       volumes:
         - name: config
           hostPath:
@@ -115,7 +115,7 @@ metadata:
   namespace: thule
 spec:
   rules:
-    - host: piglet
+    - host: piglet.serin-consultancy.co.uk
       http:
         paths:
           - path: /thule-configuration-service(/|$)(.*)
@@ -124,7 +124,7 @@ spec:
               servicePort: 80
   tls:
     - hosts:
-        - piglet
+       - piglet.serin-consultancy.co.uk
       secretName: thule-application-secrets
 ---
 kind: Service
