--- a/thule-email-service/src/main/resources/config/application-cit.yml
+++ b/thule-email-service/src/main/resources/config/application-cit.yml
@@ -12,4 +12,4 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: https://piglet/thule-authentication-service/auth/realms/thule
+          issuer-uri: https://piglet.serin-consultancy.co.uk/thule-authentication-service/auth/realms/thule
