--- a/thule-gateway-service/src/main/resources/config/application-cit.yml
+++ b/thule-gateway-service/src/main/resources/config/application-cit.yml
@@ -5,4 +5,4 @@ spring:
       client:
         provider:
           keycloak:
-            issuer-uri: https://piglet/thule-authentication-service/auth/realms/thule
+            issuer-uri: https://piglet.serin-consultancy.co.uk/thule-authentication-service/auth/realms/thule
