--- a/thule-people-service/src/main/resources/config/application-cit.yml
+++ b/thule-people-service/src/main/resources/config/application-cit.yml
@@ -5,7 +5,7 @@ spring:
       client:
         provider:
           keycloak:
-            token-uri: https://piglet/thule-authentication-service/auth/realms/thule/protocol/openid-connect/token
+            token-uri: https://piglet.serin-consultancy.co.uk/thule-authentication-service/auth/realms/thule/protocol/openid-connect/token
       resourceserver:
         jwt:
-          issuer-uri: https://piglet/thule-authentication-service/auth/realms/thule
+          issuer-uri: https://piglet.serin-consultancy.co.uk/thule-authentication-service/auth/realms/thule
