--- a/thule-ping-service/k8s/cit.yml
+++ b/thule-ping-service/k8s/cit.yml
@@ -41,7 +41,7 @@ metadata:
   namespace: thule
 spec:
   rules:
-    - host: piglet
+    - host: piglet.serin-consultancy.co.uk
       http:
         paths:
           - path: /thule-ping-service(/|$)(.*)
@@ -50,7 +50,7 @@ spec:
               servicePort: 80
   tls:
     - hosts:
-        - piglet
+       - piglet.serin-consultancy.co.uk
       secretName: thule-application-secrets
 ---
 kind: Service
