Changed piglet name to piglet.serin-consultancy.co.uk and pooh name to pooh.serin-consultancy.co.uk

--- a/thule-authentication-service/k8s/cit.yml
+++ b/thule-authentication-service/k8s/cit.yml
@@ -123,7 +123,7 @@ spec:
       hostAliases:
         - ip: 192.168.0.102
           hostnames:
-            - pooh
+            - pooh.serin-consultancy.co.uk
         - ip: 192.168.0.104
           hostnames:
            - piglet.serin-consultancy.co.uk
