--- a/thule-email-service/gradle.properties
+++ b/thule-email-service/gradle.properties
@@ -1,7 +1,7 @@
 description=Thule Email
 group=uk.co.serin.thule
 version=1.0.0-SNAPSHOT
-nexusHost=pooh
+nexusHost=pooh.serin-consultancy.co.uk
 nexusPort=8081
 springBootVersion=2.3.1.RELEASE
 thuleSharedVersion=1.2.0-SNAPSHOT
