--- a/thule-email-service/k8s/cit.yml
+++ b/thule-email-service/k8s/cit.yml
@@ -43,7 +43,7 @@ spec:
       serviceAccountName: thule-email-service-account
       containers:
         - name: thule-email-service
-          image: pooh:8082/thule-email-service:1.0.0-SNAPSHOT
+          image: pooh.serin-consultancy.co.uk:8082/thule-email-service:1.0.0-SNAPSHOT
           imagePullPolicy: Always
           env:
             - name: JDK_JAVA_OPTIONS
@@ -83,7 +83,7 @@ spec:
       hostAliases:
         - ip: 192.168.0.102
           hostnames:
-            - pooh
+            - pooh.serin-consultancy.co.uk
         - ip: 192.168.0.104
           hostnames:
            - piglet.serin-consultancy.co.uk
