--- a/thule-email-service/src/main/resources/config/application.yml
+++ b/thule-email-service/src/main/resources/config/application.yml
@@ -24,7 +24,7 @@ spring:
     sampler:
       probability: 1.0
   zipkin:
-    base-url: http://pooh:9411
+    base-url: http://pooh.serin-consultancy.co.uk:9411
     sender:
       type: web
 
