--- a/thule-shared/gradle.properties
+++ b/thule-shared/gradle.properties
@@ -1,7 +1,7 @@
 description=Thule Shared
 group=uk.co.serin.thule
 version=1.2.0-SNAPSHOT
-nexusHost=pooh
+nexusHost=pooh.serin-consultancy.co.uk
 nexusPort=8081
 springBootVersion=2.3.1.RELEASE
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=512m
