--- a/thule-ui-service/k8s/cit.yml
+++ b/thule-ui-service/k8s/cit.yml
@@ -43,7 +43,7 @@ spec:
       serviceAccountName: thule-ui-service-account
       containers:
         - name: thule-ui-service
-          image: pooh:8082/thule-ui-service:1.0.0-SNAPSHOT
+          image: pooh.serin-consultancy.co.uk:8082/thule-ui-service:1.0.0-SNAPSHOT
           imagePullPolicy: Always
           env:
             - name: JDK_JAVA_OPTIONS
