Temporarily permit any request, even when not authenticated

--- a/thule-people-service/src/main/resources/config/application-cit.yml
+++ b/thule-people-service/src/main/resources/config/application-cit.yml
@@ -9,3 +9,8 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: https://piglet.serin-consultancy.co.uk/thule-authentication-service/auth/realms/thule
+
+# Thule configuration
+thule:
+  peopleservice:
+    permit-any-request-web-security-configuration-enabled: true
