--- a/thule-people-service/src/main/resources/config/application-ide.yml
+++ b/thule-people-service/src/main/resources/config/application-ide.yml
@@ -4,12 +4,6 @@ server:
 
 # Spring boot configuration
 spring:
-  autoconfigure:
-    exclude:
-      - org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration
-      - org.springframework.boot.autoconfigure.security.oauth2.resource.servlet.OAuth2ResourceServerAutoConfiguration
-      - org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
-      - uk.co.serin.thule.spring.boot.starter.resourceserver.autoconfiguration.ResourceServerAutoConfiguration
   cloud:
     discovery:
       client:
@@ -28,6 +22,8 @@ spring:
 
 # Thule configuration
 thule:
+  peopleservice:
+    permit-any-request-web-security-configuration-enabled: true
   shared:
     logging:
       logstash:
