Upgraded io.springfox:springfox-swagger-ui [2.9.2 -> 3.0.0] and io.springfox:springfox-swagger2 [2.9.2 -> 3.0.0]

--- a/thule-email-service/src/main/resources/config/application-ide.yml
+++ b/thule-email-service/src/main/resources/config/application-ide.yml
@@ -8,6 +8,16 @@ spring:
     kubernetes:
       discovery:
         enabled: false
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    properties:
+      # mail.debug: true
+      mail.smtp.auth: true
+      mail.smtp.ssl.trust: "*"
+      mail.smtp.starttls.enable: true
+    username: thule@serin-consultancy.co.uk
+    password: ***
   zipkin:
     enabled: false
 
