Added workaround for regression bug introduced in Spring Boot 2.3.2 (see https://github.com/spring-projects/spring-boot/issues/22562)

--- a/thule-admin-service/src/main/resources/config/application.yml
+++ b/thule-admin-service/src/main/resources/config/application.yml
@@ -11,6 +11,11 @@ management:
         include: "*"
   endpoint:
     health:
+      group:
+        liveness:
+          include: livenessStateProbeIndicator,diskSpace,refreshScope
+        readiness:
+          include: readinessStateProbeIndicator
       show-details: ALWAYS
 
 # Spring boot configuration
