--- a/thule-discovery-service/src/main/resources/config/application.yml
+++ b/thule-discovery-service/src/main/resources/config/application.yml
@@ -20,6 +20,11 @@ management:
         include: "*"
   endpoint:
     health:
+      group:
+        liveness:
+          include: livenessStateProbeIndicator,diskSpace,refreshScope
+        readiness:
+          include: readinessStateProbeIndicator
       show-details: ALWAYS
 
 # Server configuration
