--- a/thule-configuration-service/src/main/resources/config/application.yml
+++ b/thule-configuration-service/src/main/resources/config/application.yml
@@ -11,6 +11,11 @@ management:
         include: "*"
   endpoint:
     health:
+      group:
+        liveness:
+          include: livenessStateProbeIndicator,diskSpace,refreshScope
+        readiness:
+          include: readinessStateProbeIndicator
       show-details: ALWAYS
 
 # Spring boot configuration
